flex/smarty-cpp.output
Terminals unused in grammar

    T_MINUS


Grammar

    0 $accept: calculation $end

    1 calculation: %empty
    2            | calculation line

    3 line: T_NEWLINE
    4     | mixed_expression T_NEWLINE
    5     | expression T_NEWLINE
    6     | T_QUIT T_NEWLINE

    7 mixed_expression: T_FLOAT
    8                 | mixed_expression T_PLUS mixed_expression
    9                 | mixed_expression T_MULTIPLY mixed_expression
   10                 | mixed_expression T_DIVIDE mixed_expression
   11                 | T_LEFT mixed_expression T_RIGHT
   12                 | expression T_PLUS mixed_expression
   13                 | expression T_MULTIPLY mixed_expression
   14                 | expression T_DIVIDE mixed_expression
   15                 | mixed_expression T_PLUS expression
   16                 | mixed_expression T_MULTIPLY expression
   17                 | mixed_expression T_DIVIDE expression
   18                 | expression T_DIVIDE expression

   19 expression: T_INT
   20           | expression T_PLUS expression
   21           | expression T_MULTIPLY expression
   22           | T_LEFT expression T_RIGHT


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    T_INT <ival> (258) 19
    T_FLOAT <fval> (259) 7
    T_PLUS (260) 8 12 15 20
    T_MINUS (261)
    T_MULTIPLY (262) 9 13 16 21
    T_DIVIDE (263) 10 14 17 18
    T_LEFT (264) 11 22
    T_RIGHT (265) 11 22
    T_NEWLINE (266) 3 4 5 6
    T_QUIT (267) 6


Nonterminals, with rules where they appear

    $accept (13)
        on left: 0
    calculation (14)
        on left: 1 2
        on right: 0 2
    line (15)
        on left: 3 4 5 6
        on right: 2
    mixed_expression <fval> (16)
        on left: 7 8 9 10 11 12 13 14 15 16 17 18
        on right: 4 8 9 10 11 12 13 14 15 16 17
    expression <ival> (17)
        on left: 19 20 21 22
        on right: 5 12 13 14 15 16 17 18 20 21 22


State 0

    0 $accept: • calculation $end

    $default  reduce using rule 1 (calculation)

    calculation  go to state 1


State 1

    0 $accept: calculation • $end
    2 calculation: calculation • line

    $end       shift, and go to state 2
    T_INT      shift, and go to state 3
    T_FLOAT    shift, and go to state 4
    T_LEFT     shift, and go to state 5
    T_NEWLINE  shift, and go to state 6
    T_QUIT     shift, and go to state 7

    line              go to state 8
    mixed_expression  go to state 9
    expression        go to state 10


State 2

    0 $accept: calculation $end •

    $default  accept


State 3

   19 expression: T_INT •

    $default  reduce using rule 19 (expression)


State 4

    7 mixed_expression: T_FLOAT •

    $default  reduce using rule 7 (mixed_expression)


State 5

   11 mixed_expression: T_LEFT • mixed_expression T_RIGHT
   22 expression: T_LEFT • expression T_RIGHT

    T_INT    shift, and go to state 3
    T_FLOAT  shift, and go to state 4
    T_LEFT   shift, and go to state 5

    mixed_expression  go to state 11
    expression        go to state 12


State 6

    3 line: T_NEWLINE •

    $default  reduce using rule 3 (line)


State 7

    6 line: T_QUIT • T_NEWLINE

    T_NEWLINE  shift, and go to state 13


State 8

    2 calculation: calculation line •

    $default  reduce using rule 2 (calculation)


State 9

    4 line: mixed_expression • T_NEWLINE
    8 mixed_expression: mixed_expression • T_PLUS mixed_expression
    9                 | mixed_expression • T_MULTIPLY mixed_expression
   10                 | mixed_expression • T_DIVIDE mixed_expression
   15                 | mixed_expression • T_PLUS expression
   16                 | mixed_expression • T_MULTIPLY expression
   17                 | mixed_expression • T_DIVIDE expression

    T_PLUS      shift, and go to state 14
    T_MULTIPLY  shift, and go to state 15
    T_DIVIDE    shift, and go to state 16
    T_NEWLINE   shift, and go to state 17


State 10

    5 line: expression • T_NEWLINE
   12 mixed_expression: expression • T_PLUS mixed_expression
   13                 | expression • T_MULTIPLY mixed_expression
   14                 | expression • T_DIVIDE mixed_expression
   18                 | expression • T_DIVIDE expression
   20 expression: expression • T_PLUS expression
   21           | expression • T_MULTIPLY expression

    T_PLUS      shift, and go to state 18
    T_MULTIPLY  shift, and go to state 19
    T_DIVIDE    shift, and go to state 20
    T_NEWLINE   shift, and go to state 21


State 11

    8 mixed_expression: mixed_expression • T_PLUS mixed_expression
    9                 | mixed_expression • T_MULTIPLY mixed_expression
   10                 | mixed_expression • T_DIVIDE mixed_expression
   11                 | T_LEFT mixed_expression • T_RIGHT
   15                 | mixed_expression • T_PLUS expression
   16                 | mixed_expression • T_MULTIPLY expression
   17                 | mixed_expression • T_DIVIDE expression

    T_PLUS      shift, and go to state 14
    T_MULTIPLY  shift, and go to state 15
    T_DIVIDE    shift, and go to state 16
    T_RIGHT     shift, and go to state 22


State 12

   12 mixed_expression: expression • T_PLUS mixed_expression
   13                 | expression • T_MULTIPLY mixed_expression
   14                 | expression • T_DIVIDE mixed_expression
   18                 | expression • T_DIVIDE expression
   20 expression: expression • T_PLUS expression
   21           | expression • T_MULTIPLY expression
   22           | T_LEFT expression • T_RIGHT

    T_PLUS      shift, and go to state 18
    T_MULTIPLY  shift, and go to state 19
    T_DIVIDE    shift, and go to state 20
    T_RIGHT     shift, and go to state 23


State 13

    6 line: T_QUIT T_NEWLINE •

    $default  reduce using rule 6 (line)


State 14

    8 mixed_expression: mixed_expression T_PLUS • mixed_expression
   15                 | mixed_expression T_PLUS • expression

    T_INT    shift, and go to state 3
    T_FLOAT  shift, and go to state 4
    T_LEFT   shift, and go to state 5

    mixed_expression  go to state 24
    expression        go to state 25


State 15

    9 mixed_expression: mixed_expression T_MULTIPLY • mixed_expression
   16                 | mixed_expression T_MULTIPLY • expression

    T_INT    shift, and go to state 3
    T_FLOAT  shift, and go to state 4
    T_LEFT   shift, and go to state 5

    mixed_expression  go to state 26
    expression        go to state 27


State 16

   10 mixed_expression: mixed_expression T_DIVIDE • mixed_expression
   17                 | mixed_expression T_DIVIDE • expression

    T_INT    shift, and go to state 3
    T_FLOAT  shift, and go to state 4
    T_LEFT   shift, and go to state 5

    mixed_expression  go to state 28
    expression        go to state 29


State 17

    4 line: mixed_expression T_NEWLINE •

    $default  reduce using rule 4 (line)


State 18

   12 mixed_expression: expression T_PLUS • mixed_expression
   20 expression: expression T_PLUS • expression

    T_INT    shift, and go to state 3
    T_FLOAT  shift, and go to state 4
    T_LEFT   shift, and go to state 5

    mixed_expression  go to state 30
    expression        go to state 31


State 19

   13 mixed_expression: expression T_MULTIPLY • mixed_expression
   21 expression: expression T_MULTIPLY • expression

    T_INT    shift, and go to state 3
    T_FLOAT  shift, and go to state 4
    T_LEFT   shift, and go to state 5

    mixed_expression  go to state 32
    expression        go to state 33


State 20

   14 mixed_expression: expression T_DIVIDE • mixed_expression
   18                 | expression T_DIVIDE • expression

    T_INT    shift, and go to state 3
    T_FLOAT  shift, and go to state 4
    T_LEFT   shift, and go to state 5

    mixed_expression  go to state 34
    expression        go to state 35


State 21

    5 line: expression T_NEWLINE •

    $default  reduce using rule 5 (line)


State 22

   11 mixed_expression: T_LEFT mixed_expression T_RIGHT •

    $default  reduce using rule 11 (mixed_expression)


State 23

   22 expression: T_LEFT expression T_RIGHT •

    $default  reduce using rule 22 (expression)


State 24

    8 mixed_expression: mixed_expression • T_PLUS mixed_expression
    8                 | mixed_expression T_PLUS mixed_expression •
    9                 | mixed_expression • T_MULTIPLY mixed_expression
   10                 | mixed_expression • T_DIVIDE mixed_expression
   15                 | mixed_expression • T_PLUS expression
   16                 | mixed_expression • T_MULTIPLY expression
   17                 | mixed_expression • T_DIVIDE expression

    T_MULTIPLY  shift, and go to state 15
    T_DIVIDE    shift, and go to state 16

    $default  reduce using rule 8 (mixed_expression)


State 25

   12 mixed_expression: expression • T_PLUS mixed_expression
   13                 | expression • T_MULTIPLY mixed_expression
   14                 | expression • T_DIVIDE mixed_expression
   15                 | mixed_expression T_PLUS expression •
   18                 | expression • T_DIVIDE expression
   20 expression: expression • T_PLUS expression
   21           | expression • T_MULTIPLY expression

    T_MULTIPLY  shift, and go to state 19
    T_DIVIDE    shift, and go to state 20

    $default  reduce using rule 15 (mixed_expression)


State 26

    8 mixed_expression: mixed_expression • T_PLUS mixed_expression
    9                 | mixed_expression • T_MULTIPLY mixed_expression
    9                 | mixed_expression T_MULTIPLY mixed_expression •
   10                 | mixed_expression • T_DIVIDE mixed_expression
   15                 | mixed_expression • T_PLUS expression
   16                 | mixed_expression • T_MULTIPLY expression
   17                 | mixed_expression • T_DIVIDE expression

    $default  reduce using rule 9 (mixed_expression)


State 27

   12 mixed_expression: expression • T_PLUS mixed_expression
   13                 | expression • T_MULTIPLY mixed_expression
   14                 | expression • T_DIVIDE mixed_expression
   16                 | mixed_expression T_MULTIPLY expression •
   18                 | expression • T_DIVIDE expression
   20 expression: expression • T_PLUS expression
   21           | expression • T_MULTIPLY expression

    $default  reduce using rule 16 (mixed_expression)


State 28

    8 mixed_expression: mixed_expression • T_PLUS mixed_expression
    9                 | mixed_expression • T_MULTIPLY mixed_expression
   10                 | mixed_expression • T_DIVIDE mixed_expression
   10                 | mixed_expression T_DIVIDE mixed_expression •
   15                 | mixed_expression • T_PLUS expression
   16                 | mixed_expression • T_MULTIPLY expression
   17                 | mixed_expression • T_DIVIDE expression

    $default  reduce using rule 10 (mixed_expression)


State 29

   12 mixed_expression: expression • T_PLUS mixed_expression
   13                 | expression • T_MULTIPLY mixed_expression
   14                 | expression • T_DIVIDE mixed_expression
   17                 | mixed_expression T_DIVIDE expression •
   18                 | expression • T_DIVIDE expression
   20 expression: expression • T_PLUS expression
   21           | expression • T_MULTIPLY expression

    $default  reduce using rule 17 (mixed_expression)


State 30

    8 mixed_expression: mixed_expression • T_PLUS mixed_expression
    9                 | mixed_expression • T_MULTIPLY mixed_expression
   10                 | mixed_expression • T_DIVIDE mixed_expression
   12                 | expression T_PLUS mixed_expression •
   15                 | mixed_expression • T_PLUS expression
   16                 | mixed_expression • T_MULTIPLY expression
   17                 | mixed_expression • T_DIVIDE expression

    T_MULTIPLY  shift, and go to state 15
    T_DIVIDE    shift, and go to state 16

    $default  reduce using rule 12 (mixed_expression)


State 31

   12 mixed_expression: expression • T_PLUS mixed_expression
   13                 | expression • T_MULTIPLY mixed_expression
   14                 | expression • T_DIVIDE mixed_expression
   18                 | expression • T_DIVIDE expression
   20 expression: expression • T_PLUS expression
   20           | expression T_PLUS expression •
   21           | expression • T_MULTIPLY expression

    T_MULTIPLY  shift, and go to state 19
    T_DIVIDE    shift, and go to state 20

    $default  reduce using rule 20 (expression)


State 32

    8 mixed_expression: mixed_expression • T_PLUS mixed_expression
    9                 | mixed_expression • T_MULTIPLY mixed_expression
   10                 | mixed_expression • T_DIVIDE mixed_expression
   13                 | expression T_MULTIPLY mixed_expression •
   15                 | mixed_expression • T_PLUS expression
   16                 | mixed_expression • T_MULTIPLY expression
   17                 | mixed_expression • T_DIVIDE expression

    $default  reduce using rule 13 (mixed_expression)


State 33

   12 mixed_expression: expression • T_PLUS mixed_expression
   13                 | expression • T_MULTIPLY mixed_expression
   14                 | expression • T_DIVIDE mixed_expression
   18                 | expression • T_DIVIDE expression
   20 expression: expression • T_PLUS expression
   21           | expression • T_MULTIPLY expression
   21           | expression T_MULTIPLY expression •

    $default  reduce using rule 21 (expression)


State 34

    8 mixed_expression: mixed_expression • T_PLUS mixed_expression
    9                 | mixed_expression • T_MULTIPLY mixed_expression
   10                 | mixed_expression • T_DIVIDE mixed_expression
   14                 | expression T_DIVIDE mixed_expression •
   15                 | mixed_expression • T_PLUS expression
   16                 | mixed_expression • T_MULTIPLY expression
   17                 | mixed_expression • T_DIVIDE expression

    $default  reduce using rule 14 (mixed_expression)


State 35

   12 mixed_expression: expression • T_PLUS mixed_expression
   13                 | expression • T_MULTIPLY mixed_expression
   14                 | expression • T_DIVIDE mixed_expression
   18                 | expression • T_DIVIDE expression
   18                 | expression T_DIVIDE expression •
   20 expression: expression • T_PLUS expression
   21           | expression • T_MULTIPLY expression

    $default  reduce using rule 18 (mixed_expression)
